Wishlist feature added
